--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.5",
+    "fs": "0.0.1-security",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "path": "^0.12.7"
   }
 }
