--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.2",
-    "path": "^0.12.7",
-    "redis": "^2.8.0"
+    "path": "^0.12.7"
   }
 }
