--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sunnyegg/rungal-api#readme",
   "dependencies": {
+    "@material-ui/icons": "^4.4.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "express-fileupload": "^1.1.6-alpha.5",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.2",
