--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 3333
 
-DB_HOST = remotemysql.com
-DB_USER = bFhOjJ9t7F
-DB_PASSWORD = WJKX9GlzUK
-DB_DATABASE = bFhOjJ9t7F
+DB_HOST = rungal-1.c4110sggx463.us-east-1.rds.amazonaws.com
+DB_USER = admin
+DB_PASSWORD = IniPassword123
+DB_DATABASE = rungal
 
 SECRET_KEY = asekasekjos
